crates/ruff_python_parser/tests/snapshots/invalid_syntax@f_string_unclosed_lbrace_in_format_spec.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/f_string_unclosed_lbrace_in_format_spec.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..29,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 0..12,
                    value: FString(
                        ExprFString {
                            node_index: NodeIndex(None),
                            range: 0..12,
                            value: FStringValue {
                                inner: Single(
                                    FString {
                                        range: 0..12,
                                        node_index: NodeIndex(None),
                                        elements: [
                                            Literal(
                                                InterpolatedStringLiteralElement {
                                                    range: 2..8,
                                                    node_index: NodeIndex(None),
                                                    value: "hello ",
                                                },
                                            ),
                                            Interpolation(
                                                InterpolatedElement {
                                                    range: 8..11,
                                                    node_index: NodeIndex(None),
                                                    expression: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 9..10,
                                                            id: Name("x"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    debug_text: None,
                                                    conversion: None,
                                                    format_spec: Some(
                                                        InterpolatedStringFormatSpec {
                                                            range: 11..11,
                                                            node_index: NodeIndex(None),
                                                            elements: [],
                                                        },
                                                    ),
                                                },
                                            ),
                                        ],
                                        flags: FStringFlags {
                                            quote_style: Double,
                                            prefix: Regular,
                                            triple_quoted: false,
                                            unclosed: false,
                                        },
                                    },
                                ),
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 13..28,
                    value: FString(
                        ExprFString {
                            node_index: NodeIndex(None),
                            range: 13..28,
                            value: FStringValue {
                                inner: Single(
                                    FString {
                                        range: 13..28,
                                        node_index: NodeIndex(None),
                                        elements: [
                                            Literal(
                                                InterpolatedStringLiteralElement {
                                                    range: 15..21,
                                                    node_index: NodeIndex(None),
                                                    value: "hello ",
                                                },
                                            ),
                                            Interpolation(
                                                InterpolatedElement {
                                                    range: 21..27,
                                                    node_index: NodeIndex(None),
                                                    expression: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 22..23,
                                                            id: Name("x"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    debug_text: None,
                                                    conversion: None,
                                                    format_spec: Some(
                                                        InterpolatedStringFormatSpec {
                                                            range: 24..27,
                                                            node_index: NodeIndex(None),
                                                            elements: [
                                                                Literal(
                                                                    InterpolatedStringLiteralElement {
                                                                        range: 24..27,
                                                                        node_index: NodeIndex(None),
                                                                        value: ".3f",
                                                                    },
                                                                ),
                                                            ],
                                                        },
                                                    ),
                                                },
                                            ),
                                        ],
                                        flags: FStringFlags {
                                            quote_style: Double,
                                            prefix: Regular,
                                            triple_quoted: false,
                                            unclosed: false,
                                        },
                                    },
                                ),
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | f"hello {x:"
  |            ^ Syntax Error: f-string: expecting `}`
2 | f"hello {x:.3f"
  |


  |
1 | f"hello {x:"
2 | f"hello {x:.3f"
  |               ^ Syntax Error: f-string: expecting `}`
